Changelog for plone.app.contentmenu

    (name of developer listed in brackets)

plone.app.contentmenu - 0.1 Unreleased

    - Initial package structure.
      [zopeskel]
